# HumanEditBench

./: .gitignore  Dockerfile  HEB.config  README.md  display_results_csv.py  editbench.config  entrypoint.sh  pyproject.toml  run_editbench.sh  run_heb.sh
editbench/: evaluation.py
examples/: claude_generate.py  generate.py  generate_and_test.py  open_router_generate.py  openai_generate.py  test_editbench.py  test_heb.py
generations/claude-3-7-sonnet-20250219/: 1  10  100  102  103  104  105  106  107  108  109  11  110  111  112  113  115  116  117  118  12  120  121  122  123  124  125  126  127  128  129  13  131  132  133  134  135  136  137  138  (+459 more)
generations/claude-sonnet-4-20250514/: 1  10  100  103  104  105  106  107  108  109  110  111  112  114  115  116  117  118  119  12  120  121  123  124  125  126  127  128  129  13  131  132  133  134  136  137  138  139  14  143  (+426 more)
generations/gpt-o3-mini/: 102  103  104  105  108  109  111  113  115  118  124  125  127  128  131  134  136  140  142  145  148  149  15  150  152  18  2  20  21  24  25  26  33  37  38  39  4  40  44  45  (+34 more)
generations/pre_sep_20_gpt-o3-mini/: 1  10  100  101  106  107  11  110  112  114  116  117  119  12  120  121  122  123  126  129  13  130  132  133  135  137  138  139  14  141  143  144  146  147  151  16  17  19  22  23  (+38 more)
human_edit_bench/: evaluation.py
prompts/: cursor_position.txt  no_highlight.txt  python_whole_file.txt  whole_file.txt
results/complete_whole_file/: claude-3-7-sonnet-20250219.json  claude-sonnet-4-20250514.json
results/cursor_position/: claude-sonnet-4.json  (+1 more)
(+7941 files in other folders)
